updated email verification logic
